apply Cacheable annotations to methods that retrieves driver or all driver, CachePut for update method and CacheEvict for delete method